--- a/azg.html
+++ b/azg.html
@@ -4,9 +4,134 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Phone</title>
 </head>
 <body>
-    
+    <style>
+        body {background: linear-gradient(#a85b4f, #dfc555, #88d356, #6d97c7, #1569c9, #946dc7) fixed;}
+        td {
+            border: 1px solid rgb(72, 255, 0);
+            color: rgb(0, 0, 0);
+        }
+        a {
+            text-decoration: none;
+            color: #c47d7d;
+        }
+        table {
+            width: 1000px;
+            border: 5px solid white;
+            margin: auto;
+        }
+    </style>
+    <table> 
+        <tr>
+            <td><B>   </B></td>
+            <td><B>Phone 1</B></td>
+            <td><B>Phone 2</B></td>
+            <td><B>Phone 3</B></td>
+            <td><B>Phone 4</B></td>
+            <td><B>Phone 5</B></td>
+            <td><B>Phone 6</B></td>
+        </tr>
+        <tr>
+            <td><U>Price(US Dollar)</U></td>
+            <td><I>$199</I></td>
+            <td><I>$255</I></td>
+            <td><I>$310</I></td>
+            <td><I>$355</I></td>
+            <td><I>$215</I></td>
+            <td><I>$235</I></td>
+        </tr>
+        <tr>
+            <td><U>Operating System</U></td>
+            <td><I>4.0in</I></td>
+            <td><I>4.0in</I></td>
+            <td><I>5.0in</I></td>
+            <td><I>4.7in</I></td>
+            <td><I>4.7in</I></td>
+            <td><I>5.0in</I></td>
+        </tr>
+        <tr>
+            <td><U>Display Size</U></td>
+            <td><I>4.0in</I></td>
+            <td><I>4.0in</I></td>
+            <td><I>4.0in</I></td>
+            <td><I>4.0in</I></td>
+            <td><I>4.0in</I></td>
+            <td><I>4.0in</I></td>
+        </tr>
+        <tr>
+            <td><U>Screen Resolution</U></td>
+            <td><I>1280/1080</I></td>
+            <td><I>1280/1080</I></td>
+            <td><I>1280/1080</I></td>
+            <td><I>1280/1080</I></td>
+            <td><I>1280/1080</I></td>
+            <td><I>1280/1080</I></td>
+        </tr>
+        <tr>
+            <td><U>Weight</U></td>
+            <td><I>112g</I></td>
+            <td><I>112g</I></td>
+            <td><I>112g</I></td>
+            <td><I>112g</I></td>
+            <td><I>112g</I></td>
+            <td><I>112g</I></td>
+        </tr>
+        <tr>
+            <td><U>RAM</U></td>
+            <td><I>1GB</I></td>
+            <td><I>2GB</I></td>
+            <td><I>1GB</I></td>
+            <td><I>2GB</I></td>
+            <td><I>2GB</I></td>
+            <td><I>1GB</I></td>
+        </tr>
+        <tr>
+            <td><U>Processor</U></td>
+            <td><I>1.5GHz</I></td>
+            <td><I>1.5GHz</I></td>
+            <td><I>1.5GHz</I></td>
+            <td><I>1.5GHz</I></td>
+            <td><I>1.5GHz</I></td>
+            <td><I>1.5GHz</I></td>
+        </tr>
+        <tr>
+            <td><U>Camera(real/front)</U></td>
+            <td><I>8MP/1MP</I></td>
+            <td><I>8MP/1MP</I></td>
+            <td><I>8MP/1MP</I></td>
+            <td><I>8MP/1MP</I></td>
+            <td><I>8MP/1MP</I></td>
+            <td><I>8MP/1MP</I></td>
+        </tr>
+        <tr>
+            <td><U>Internal storage</U></td>
+            <td><I>32 GB</I></td>
+            <td><I>32 GB</I></td>
+            <td><I>64 GB</I></td>
+            <td><I>64 GB</I></td>
+            <td><I>32 GB</I></td>
+            <td><I>32 GB</I></td>
+        </tr>
+        <tr>
+            <td><U>Storage expansion</U></td>
+            <td><I>NO</I></td>
+            <td><I>YES</I></td>
+            <td><I>YES</I></td>
+            <td><I>NO</I></td>
+            <td><I>NO</I></td>
+            <td><I>YES</I></td>
+        </tr>
+        <tr>
+            <td><U>Battery Capacity</U></td>
+            <td><I>250Ah</I></td>
+            <td><I>250Ah</I></td>
+            <td><I>250Ah</I></td>
+            <td><I>250Ah</I></td>
+            <td><I>250Ah</I></td>
+            <td><I>250Ah</I></td>
+        </tr>
+    </table> 
 </body>
 </html>
