--- a/azg.html
+++ b/azg.html
@@ -26,111 +26,111 @@
     <table> 
         <tr>
             <td><B>   </B></td>
-            <td><B>Phone 1</B></td>
-            <td><B>Phone 2</B></td>
-            <td><B>Phone 3</B></td>
-            <td><B>Phone 4</B></td>
-            <td><B>Phone 5</B></td>
-            <td><B>Phone 6</B></td>
+            <td><B><center>Phone 1</center></B></td>
+            <td><B><center>Phone 2</center></B></td>
+            <td><B><center>Phone 3</center></B></td>
+            <td><B><center>Phone 4</center></B></td>
+            <td><B><center>Phone 5</center></B></td>
+            <td><B><center>Phone 6</center></B></td>
         </tr>
         <tr>
-            <td><U>Price(US Dollar)</U></td>
-            <td><I>$199</I></td>
-            <td><I>$255</I></td>
-            <td><I>$310</I></td>
-            <td><I>$355</I></td>
-            <td><I>$215</I></td>
-            <td><I>$235</I></td>
+            <td><U><center>Price(US Dollar)</center></U></td>
+            <td><I><center>$199</center></I></td>
+            <td><I><center>$255</center></I></td>
+            <td><I><center>$310</center></I></td>
+            <td><I><center>$355</center></I></td>
+            <td><I><center>$215</center></I></td>
+            <td><I><center>$235</center></I></td>
         </tr>
         <tr>
-            <td><U>Operating System</U></td>
-            <td><I>4.0in</I></td>
-            <td><I>4.0in</I></td>
-            <td><I>5.0in</I></td>
-            <td><I>4.7in</I></td>
-            <td><I>4.7in</I></td>
-            <td><I>5.0in</I></td>
+            <td><U><center>Operating System</center></U></td>
+            <td><I><center>4.0in</center></I></td>
+            <td><I><center>4.0in</center></I></td>
+            <td><I><center>5.0in</center></I></td>
+            <td><I><center>4.7in</center></I></td>
+            <td><I><center>4.7in</center></I></td>
+            <td><I><center>5.0in</center></I></td>
         </tr>
         <tr>
-            <td><U>Display Size</U></td>
-            <td><I>4.0in</I></td>
-            <td><I>4.0in</I></td>
-            <td><I>4.0in</I></td>
-            <td><I>4.0in</I></td>
-            <td><I>4.0in</I></td>
-            <td><I>4.0in</I></td>
+            <td><U><center>Display Size</center></U></td>
+            <td><I><center>4.0in</center></I></td>
+            <td><I><center>4.0in</center></I></td>
+            <td><I><center>4.0in</center></I></td>
+            <td><I><center>4.0in</center></I></td>
+            <td><I><center>4.0in</center></I></td>
+            <td><I><center>4.0in</center></I></td>
         </tr>
         <tr>
-            <td><U>Screen Resolution</U></td>
-            <td><I>1280/1080</I></td>
-            <td><I>1280/1080</I></td>
-            <td><I>1280/1080</I></td>
-            <td><I>1280/1080</I></td>
-            <td><I>1280/1080</I></td>
-            <td><I>1280/1080</I></td>
+            <td><U><center>Screen Resolution</center></U></td>
+            <td><I><center>1280/1080</center></I></td>
+            <td><I><center>1280/1080</center></I></td>
+            <td><I><center>1280/1080</center></I></td>
+            <td><I><center>1280/1080</center></I></td>
+            <td><I><center>1280/1080</center></I></td>
+            <td><I><center>1280/1080</center></I></td>
         </tr>
         <tr>
-            <td><U>Weight</U></td>
-            <td><I>112g</I></td>
-            <td><I>112g</I></td>
-            <td><I>112g</I></td>
-            <td><I>112g</I></td>
-            <td><I>112g</I></td>
-            <td><I>112g</I></td>
+            <td><U><center>Weight</center></U></td>
+            <td><I><center>112g</center></I></td>
+            <td><I><center>112g</center></I></td>
+            <td><I><center>112g</center></I></td>
+            <td><I><center>112g</center></I></td>
+            <td><I><center>112g</center></I></td>
+            <td><I><center>112g</center></I></td>
         </tr>
         <tr>
-            <td><U>RAM</U></td>
-            <td><I>1GB</I></td>
-            <td><I>2GB</I></td>
-            <td><I>1GB</I></td>
-            <td><I>2GB</I></td>
-            <td><I>2GB</I></td>
-            <td><I>1GB</I></td>
+            <td><U><center>RAM</center></U></td>
+            <td><I><center>1GB</center></I></td>
+            <td><I><center>2GB</center></I></td>
+            <td><I><center>1GB</center></I></td>
+            <td><I><center>2GB</center></I></td>
+            <td><I><center>2GB</center></I></td>
+            <td><I><center>1GB</center></I></td>
         </tr>
         <tr>
-            <td><U>Processor</U></td>
-            <td><I>1.5GHz</I></td>
-            <td><I>1.5GHz</I></td>
-            <td><I>1.5GHz</I></td>
-            <td><I>1.5GHz</I></td>
-            <td><I>1.5GHz</I></td>
-            <td><I>1.5GHz</I></td>
+            <td><U><center>Processor</center></U></td>
+            <td><I><center>1.5GHz</center></I></td>
+            <td><I><center>1.5GHz</center></I></td>
+            <td><I><center>1.5GHz</center></I></td>
+            <td><I><center>1.5GHz</center></I></td>
+            <td><I><center>1.5GHz</center></I></td>
+            <td><I><center>1.5GHz</center></I></td>
         </tr>
         <tr>
-            <td><U>Camera(real/front)</U></td>
-            <td><I>8MP/1MP</I></td>
-            <td><I>8MP/1MP</I></td>
-            <td><I>8MP/1MP</I></td>
-            <td><I>8MP/1MP</I></td>
-            <td><I>8MP/1MP</I></td>
-            <td><I>8MP/1MP</I></td>
+            <td><U><center>Camera(real/front)</center></U></td>
+            <td><I><center>8MP/1MP</center></I></td>
+            <td><I><center>8MP/1MP</center></I></td>
+            <td><I><center>8MP/1MP</center></I></td>
+            <td><I><center>8MP/1MP</center></I></td>
+            <td><I><center>8MP/1MP</center></I></td>
+            <td><I><center>8MP/1MP</center></I></td>
         </tr>
         <tr>
-            <td><U>Internal storage</U></td>
-            <td><I>32 GB</I></td>
-            <td><I>32 GB</I></td>
-            <td><I>64 GB</I></td>
-            <td><I>64 GB</I></td>
-            <td><I>32 GB</I></td>
-            <td><I>32 GB</I></td>
+            <td><U><center>Internal storage</center></U></td>
+            <td><I><center>32 GB</center></I></td>
+            <td><I><center>32 GB</center></I></td>
+            <td><I><center>64 GB</center></I></td>
+            <td><I><center>64 GB</center></I></td>
+            <td><I><center>32 GB</center></I></td>
+            <td><I><center>32 GB</center></I></td>
         </tr>
         <tr>
-            <td><U>Storage expansion</U></td>
-            <td><I>NO</I></td>
-            <td><I>YES</I></td>
-            <td><I>YES</I></td>
-            <td><I>NO</I></td>
-            <td><I>NO</I></td>
-            <td><I>YES</I></td>
+            <td><U><center>Storage expansion</center></U></td>
+            <td><I><center>NO</center></I></td>
+            <td><I><center>YES</center></I></td>
+            <td><I><center>YES</center></I></td>
+            <td><I><center>NO</center></I></td>
+            <td><I><center>NO</center></I></td>
+            <td><I><center>YES</center></I></td>
         </tr>
         <tr>
-            <td><U>Battery Capacity</U></td>
-            <td><I>250Ah</I></td>
-            <td><I>250Ah</I></td>
-            <td><I>250Ah</I></td>
-            <td><I>250Ah</I></td>
-            <td><I>250Ah</I></td>
-            <td><I>250Ah</I></td>
+            <td><U><center>Battery Capacity</center></U></td>
+            <td><I><center>250Ah</center></I></td>
+            <td><I><center>250Ah</center></I></td>
+            <td><I><center>250Ah</center></I></td>
+            <td><I><center>250Ah</center></I></td>
+            <td><I><center>250Ah</center></I></td>
+            <td><I><center>250Ah</center></I></td>
         </tr>
     </table> 
 </body>
